--- a/config/ur10e/physical_parameters.yaml
+++ b/config/ur10e/physical_parameters.yaml
@@ -23,6 +23,24 @@ inertia_parameters:
     base:
       radius: 0.075
       length: 0.038
+    shoulder:
+      radius: 0.075
+      length: 0.178
+    upperarm:
+      radius: 0.075
+      length: 0.612
+    forearm:
+      radius: 0.075
+      length: 0.57155
+    wrist_1:
+      radius: 0.075
+      length: 0.12
+    wrist_2:
+      radius: 0.075
+      length: 0.12
+    wrist_3:
+      radius: 0.045
+      length: 0.05
 
   # model referring to https://www.universal-robots.com/articles/ur/application-installation/dh-parameters-for-calculations-of-kinematics-and-dynamics/
   center_of_mass:
